--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 # But descend into directories
 !*/
 
+# TRYHACKME
 !tryhackme/Kitty/**
+
+# HACKTHEBOX
+!hackthebox/Knife/**
+!hackthebox/TwoMillion/**
 
 !.gitignore
